--- a/src/app/bsr/editPost-it.html
+++ b/src/app/bsr/editPost-it.html
@@ -1,5 +1,5 @@
-<div style="position: relative;" fxLayoutAlign="center center">
-    <div *ngIf="infoMessage && !isMobileInfo" style="width: 400px;height: 500px;" >
+<div style="position: relative;overflow: hidden;" fxLayoutAlign="center center">
+    <div *ngIf="infoMessage && !isMobileInfo" style="width: 400px;">
 
 
 
@@ -42,12 +42,12 @@
 
     </div>
 
-    <div *ngIf="!infoMessage && !isMobileInfo" style="height: 500px;">
+    <div *ngIf="!infoMessage && !isMobileInfo" style="width: 100%;overflow: hidden;">
 
         <form name="loginForm" [formGroup]="loginForm" novalidate class="">
             <div fxLayoutAlign="center center">
 
-                <mat-form-field *ngIf="!isDeleting" style="width: 550px;" appearance="outline">
+                <mat-form-field *ngIf="!isDeleting" appearance="outline" style="width: 400px;">
                     <mat-label>CONCEPT</mat-label>
                     <input matInput type="Concept" placeholder="Concept" formControlName="name">
                 </mat-form-field>
@@ -57,7 +57,7 @@
             <div class="mat-h3" style="text-align: center;color: #000;">
                 <div class="row">
                     <div class="col-md-6">
-                        <div>Key Words and Concepts</div>
+                        <div style="color: #004684;">Key Words and Concepts</div>
                         <ckeditor [editor]="Editor" [data]="dataEditor" (ready)="onReady($event)"
                             [(ngModel)]="model.editorData" class="ckeditorcev"></ckeditor>
                         <!-- <angular-editor [(ngModel)]="model.editorData" [config]="config"></angular-editor> -->
@@ -66,17 +66,19 @@
 
 
 
-                    <div class="col-md-1"> <button (click)="buttonOption('savePost')" class="refreshbutton" mat-button
+                    <div class="col-md-1">
+                        <button (click)="getSinonyms('one')" class="refreshbutton" mat-button
                             style="font-size: 8px;" color="success" aria-label="icon">
                             SYNONYMS
-                        </button></div>
+                        </button>
+                    </div>
                     <div class="col-md-5">
-                        <div>Name Candidates</div>
+                        <div style="color: #004684;">Name Candidates</div>
 
                         <mat-form-field style="width: 550px;">
                             <textarea matInput cdkTextareaAutosize cdkAutosizeMinRows="23" formControlName="suma"
                                 cdkAutosizeMaxRows="23"
-                                style="max-height: 400px;border-top:solid black 1px;border-left:solid black 1px;border-right:solid black 1px"
+                                style="max-height: 400px;border-top:solid black 1px;border-left:solid black 1px;border-right:solid black 1px; padding: 10px;"
                                 appearance="outline" formControlName="suma"></textarea>
                         </mat-form-field>
                         <!-- <ckeditor [editor]="Editor" [data]="dataEditor" [(ngModel)]="model.namesData" style="max-height: 400px;"></ckeditor> -->
@@ -87,7 +89,7 @@
 
         <div fxLayoutAlign="end end">
             <button (click)="buttonOption('savePost')" class="refreshbutton" mat-fab style="color: white;position: fixed;
-        bottom: 100px;background-color: green;padding: 4px;outline: none;" color="success" aria-label="icon">
+        bottom: 128px;background-color: green;padding: 4px;outline: none;" color="success" aria-label="icon">
                 <mat-icon>check</mat-icon>
             </button>
         </div>
@@ -126,7 +128,7 @@
             </button>
         </div>
 
-        <div ng-hide="!bsrMenubarController.isItNSR" class="nonprop-name-rule-style" aria-hidden="false" style="">
+        <div ng-hide="!bsrMenubarController.isItNSR" class="nonprop-name-rule-style" aria-hidden="false">
 
             <h4>
                 The letters h, j, k, w, and y should be avoided
